--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Learn Piano</title>
     <style>
       *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
-      body { font-family: system-ui, sans-serif; background: #1a1a2e; color: #e0e0e0; min-height: 100vh; }
-      #app { max-width: 1200px; margin: 0 auto; padding: 1.5rem; }
+      html { height: 100%; }
+      body { font-family: system-ui, sans-serif; background: #1a1a2e; color: #e0e0e0; height: 100%; overflow: hidden; }
+      #app { height: 100%; display: flex; flex-direction: column; }
     </style>
   </head>
   <body>
